Add version number

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = Parallel::WorkUnit
+name    = Parallel-WorkUnit
 author  = Joel Maslak <jmaslak@antelope.net>
 license = Perl_5
 copyright_holder = Joel Maslak
@@ -9,4 +9,5 @@ version = 1.000
 [@Basic]
 [AutoPrereqs]
 [PodWeaver]
+[PkgVersion]
 
