--- a/dist.ini
+++ b/dist.ini
@@ -11,3 +11,11 @@ version = 1.002
 [PodWeaver]
 [PkgVersion]
 
+[OSPrereqs / MSWin32]
+threads=0
+Thread::Queue=0
+
+[OSPrereqs / !MSWin32]
+IO::Pipe=0
+IO::Select=0
+
