--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: perl
 perl:
   - "5.24.0-thr"
-  - "5.24.0"
-  - "5.24"
   - "5.22"
   - "5.20"
   - "5.18"
@@ -11,7 +9,7 @@ perl:
   - "5.12"
   - "5.10"
   - "5.8"
-  - "BLEED"
+  - "blead"
   - "dev"
 sudo: false
 matrix:
