--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,10 @@
 name    = Parallel-WorkUnit
-author  = Joel Maslak <jmaslak@antelope.net>
+author  = J. Maslak <jmaslak@antelope.net>
 license = Perl_5
-copyright_holder = Joel Maslak
+copyright_holder = J. Maslak
 copyright_year   = 2016
 
-version = 1.009
+version = 1.010
 
 [@Basic]
 [AutoPrereqs]
