Add Kwalitee tests

--- a/dist.ini
+++ b/dist.ini
@@ -8,12 +8,14 @@ version = 1.012
 
 [@Basic]
 [AutoPrereqs]
+; [ExtraTests]
 [GitHub::Meta]
 [MetaJSON]
 [MetaProvides::Package]
 [PodWeaver]
 [PkgVersion]
 [PodSyntaxTests]
+[Test::Kwalitee]
 
 [OSPrereqs / MSWin32]
 threads=0
