Updates for official 1.100 release

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Joelle Maslak
 copyright_year   = 2017
 
-version = 1.015
+version = 1.100
 
 [@Basic]
 [AutoPrereqs]
@@ -23,4 +23,7 @@ Thread::Queue=0
 
 [Test::Perl::Critic]
 critic_config = t/data/perlcriticrc
+
+[Prereqs / RuntimeRecommends]
+AnyEvent=0
 
