--- a/dist.ini
+++ b/dist.ini
@@ -15,15 +15,18 @@ version = 1.112
 [PodWeaver]
 [PkgVersion]
 [PodSyntaxTests]
-[Test::Kwalitee]
+[Test::Kwalitee::Extra]
 
 [OSPrereqs / MSWin32]
 threads=0
 Thread::Queue=0
 
+[Prereqs / RuntimeRecommends]
+AnyEvent=0
+
 [Test::Perl::Critic]
 critic_config = t/data/perlcriticrc
 
-[Prereqs / RuntimeRecommends]
-AnyEvent=0
+[Test::TrailingSpace]
+filename_regex = \.(?:ini|pl|pm|t|txt)\z
 
