Add additional tests

--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,9 @@ version = 1.112
 [PkgVersion]
 [PodSyntaxTests]
 [Test::Kwalitee::Extra]
+[Test::UnusedVars]
+[Test::UseAllModules]
+[Test::Version]
 
 [OSPrereqs / MSWin32]
 threads=0
