--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Joelle Maslak
 copyright_year   = 2018
 
-version = 1.115
+version = 1.116
 
 [@Basic]
 [AutoPrereqs]
@@ -22,10 +22,13 @@ version = 1.115
 
 [OSPrereqs / MSWin32]
 threads=0
-Thread::Queue=0
+Thread::Queue=3.12          ; Need predictible thread behavior
 
 [Prereqs / RuntimeRecommends]
-AnyEvent=0
+AnyEvent=7.14               ; Need predictable AnyEvent behavior
+
+[Prereqs / BuildRequires]
+Test::UseAllModules=0.17    ; [Test::UseAllModules] fails with earlier versions
 
 [Test::Perl::Critic]
 critic_config = t/data/perlcriticrc
