--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,12 @@ copyright_year   = 2018
 
 version = 1.201
 
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = Readme
+
 [AutoPrereqs]
+[ContributorCovenant]
 ; [ExtraTests]
 [GitHub::Meta]
 [MetaJSON]
@@ -20,6 +24,10 @@ version = 1.201
 [Test::UseAllModules]
 [Test::Version]
 
+[CopyFilesFromBuild]
+copy = CODE_OF_CONDUCT.md
+copy = README.pod
+
 [OSPrereqs / MSWin32]
 threads=0
 Thread::Queue=3.12          ; Need predictible thread behavior
@@ -29,6 +37,10 @@ AnyEvent=7.14               ; Need predictable AnyEvent behavior
 
 [Prereqs / BuildRequires]
 Test::UseAllModules=0.17    ; [Test::UseAllModules] fails with earlier versions
+
+[ReadmeAnyFromPod]
+type=pod
+filename=README.pod
 
 [Test::Perl::Critic]
 critic_config = t/data/perlcriticrc
