Use config bundle

--- a/dist.ini
+++ b/dist.ini
@@ -7,26 +7,8 @@ copyright_year   = 2018
 version = 1.201
 
 [@Filter]
--bundle = @Basic
--remove = Readme
-
-[AutoPrereqs]
-[ContributorCovenant]
-; [ExtraTests]
-[GitHub::Meta]
-[MetaJSON]
-[MetaProvides::Package]
-[PodWeaver]
-[PkgVersion]
-[PodSyntaxTests]
-[Test::Kwalitee::Extra]
-[Test::UnusedVars]
-[Test::UseAllModules]
-[Test::Version]
-
-[CopyFilesFromBuild]
-copy = CODE_OF_CONDUCT.md
-copy = README.pod
+-bundle  = @Author::JMASLAK
+-version = 0.002
 
 [OSPrereqs / MSWin32]
 threads=0
@@ -35,16 +17,6 @@ Thread::Queue=3.12          ; Need predictible thread behavior
 [Prereqs / RuntimeRecommends]
 AnyEvent=7.14               ; Need predictable AnyEvent behavior
 
-[Prereqs / BuildRequires]
-Test::UseAllModules=0.17    ; [Test::UseAllModules] fails with earlier versions
-
-[ReadmeAnyFromPod]
-type=pod
-filename=README.pod
-
 [Test::Perl::Critic]
 critic_config = t/data/perlcriticrc
-
-[Test::TrailingSpace]
-filename_regex = \.(?:ini|pl|pm|t|txt)\z
 
