Increment major version

--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,13 @@ license = Perl_5
 copyright_holder = Joelle Maslak
 copyright_year   = 2018
 
+[AutoVersion]
+major=2                     ; Since we started using this after 1.2 was released
+
 [@Filter]
 -bundle  = @Author::JMASLAK
 -version = 1.181841
+-remove  = AutoVersion
 
 [OSPrereqs / MSWin32]
 threads=0
