--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,9 @@ Thread::Queue=3.12          ; Need predictible thread behavior
 [Prereqs / RuntimeRecommends]
 AnyEvent=7.14               ; Need predictable AnyEvent behavior
 
+[Prereqs / TestRequires]
+Test::UseAllModules=0.15    ; Version .14 uses an obsolete method in Test::Builder
+
 [Test::Perl::Critic]
 critic_config = t/data/perlcriticrc
 
