--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,10 @@ major=2                     ; Since we started using this after 1.2 was released
 -bundle  = @Author::JMASLAK
 -version = 1.181841
 -remove  = AutoVersion
+-remove  = AutoPrereqs
+
+[AutoPrereqs]
+skip = ^AnyEvent$
 
 [OSPrereqs / MSWin32]
 threads=0
