Provide Corinna tests and documentation caveats

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Parallel-WorkUnit
 author  = Joelle Maslak <jmaslak@antelope.net>
 license = Perl_5
 copyright_holder = Joelle Maslak
-copyright_year   = 2020
+copyright_year   = 2015-2023
 
 [AutoVersion]
 major=2                     ; Since we started using this after 1.2 was released
@@ -21,6 +21,7 @@ threads=0
 
 [Prereqs / TestRequires]
 Test::UseAllModules=0.15    ; Version .14 uses an obsolete method in Test::Builder
+Feature::Compat::Class=0.006
 
 [Test::Perl::Critic]
 critic_config = t/data/perlcriticrc
