--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,7 @@
 # Executes test, once with AnyEvent (which can be used if it is installed,
 # but is not part of the dependency chain) and with just the dependency
-# chain. Note we only test perls 5.26+
+# chain. Note we do not test on all versions that are supported by the
+# module.
 name: Execute tests
 
 on:
