--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,7 +1,7 @@
 # Executes test, once with AnyEvent (which can be used if it is installed,
 # but is not part of the dependency chain) and with just the dependency
 # chain. Note we do not test on all versions that are supported by the
-# module.
+# module, and in particular does not test on Windows.
 name: Execute tests
 
 on:
