--- a/dist.ini
+++ b/dist.ini
@@ -23,7 +23,7 @@ threads=0
 Test::UseAllModules=0.15    ; Version .14 uses an obsolete method in Test::Builder
 Object::Pad=0.804
 
-[Prereq]
+[Prereqs]
 perl = 5.022
 
 [Test::Perl::Critic]
